--- a/src/app/administrativo/incidencias/incidencias.component.html
+++ b/src/app/administrativo/incidencias/incidencias.component.html
@@ -1,4 +1,4 @@
-<img class="imgPag" src="./assets/Administrativo/incidenciasVer.png"><p class="tituloSecc">Incidencias</p>
+<div class="titulo"><img class="imgPag" src="./assets/Administrativo/incidenciasVer.png"><p class="tituloSecc">Incidencias</p></div>
 
 <div class="crearNuevo">
   <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
