--- a/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -1,4 +1,4 @@
-<img class="imgPag" src="./assets/Administrativo/monitorizarOrdenVer.png"><p class="tituloSecc">Monitorizar Orden</p>
+<div class="titulo"><img class="imgPag" src="./assets/Administrativo/monitorizarOrdenVer.png"><p class="tituloSecc">Monitorizar Orden</p></div>
 
 <div class="crearNuevo">
   <button type="submit" class="btn btn-info botonCrear" onclick="location.href = 'administrativo/crear-orden'">Crear</button>
