--- a/src/app/gestor/gestionar-gruas/gestionar-gruas.component.html
+++ b/src/app/gestor/gestionar-gruas/gestionar-gruas.component.html
@@ -1,4 +1,4 @@
-<img class="imgPag" src="/assets/Gestor/gestionarGruasVer.png" alt="Gestionar Gruas"><p class="tituloSecc">Gestionar grúas</p>
+<div class="titulo"><img class="imgPag" src="/assets/Gestor/gestionarGruasVer.png" alt="Gestionar Gruas"><p class="tituloSecc">Gestionar grúas</p></div>
 
 <form [formGroup]="form" (ngSubmit)="enviar()">
   <div class="form-group div1">
