--- a/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
+++ b/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
@@ -1,4 +1,4 @@
-<img class="imgPag" src="./assets/Administrativo/buscarContenedorVer.png"><p class="tituloSecc">Buscar contenedor</p>
+<div class="titulo"><img class="imgPag" src="./assets/Administrativo/buscarContenedorVer.png"><p class="tituloSecc">Buscar contenedor</p></div>
 
 <div class="crearNuevo">
   <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
