--- a/src/app/gestor/usuarios/usuarios.component.html
+++ b/src/app/gestor/usuarios/usuarios.component.html
@@ -1,4 +1,4 @@
-<img class="imgPag" src="./assets/Gestor/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p>
+<div class="titulo"><img class="imgPag" src="./assets/Gestor/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p></div>
 
 <div class="crearNuevo">
   <button type="submit" class="btn btn-info botonCrear" onclick="location.href = 'gestor/crear-usuario'">Crear</button>
