--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,61 +1,4 @@
-/* div.menu {
-  background: var(--Cinder-800, #133379);
-  height: 100vh;
-  flex-shrink: 0;
-  padding-right: 10px;
-}
-
-div.seleccionado {
-  border-radius: 0px 20px 20px 0px;
-  background: var(--Cinder-50, #f1f5fe);
-  display: flex;
-  width: 101px;
-  height: 82px;
-  margin-top: 2px;
-  padding: 15px 21px 15px 28px;
-  justify-content: flex-end;
-  align-items: center;
-  flex-shrink: 0;
-  color: var(--Cinder-50, #f1f5fe);
-  font-family: Inter;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
-.imgMenu {
-  width: 53px;
-  height: 53px;
-  flex-shrink: 0;
-  margin-left: 24px;
-  cursor: pointer;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-
-.primeraImg {
-  margin-top: 50px;
-}
-
-.home {
-  width: 56px;
-  height: 50px;
-  flex-shrink: 0;
-  position: absolute;
-  bottom: 0px;
-}
-
-.perfil {
-  border-radius: 51px;
-  width: 81px;
-  height: 86px;
-  flex-shrink: 0;
-  margin-left: 10px;
-  margin-top: 40px;
-} */
-
-div.menu {
+div.menuCompleto {
   background-color: #133379;
   transition: width 0.5s ease-in-out;
   
@@ -66,19 +9,17 @@ div.menu {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  position: fixed;
   padding-top: 20px;
   z-index: 100;
-
 }
 
-div.menu:hover {
-  width: 320px;
+div.menuCompleto:hover {
+  width: 300px;
   z-index: 100;
   align-items: flex-start;
-  padding-left: 15px;
   position: fixed;
-
 }
 
 .perfil {
@@ -96,12 +37,26 @@ div.menu:hover {
   
 }
 
+.imagenLink {
+  margin-left: -20px;
+  padding-left: 18px;
+  padding-right: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.imagenLink:hover {
+  border-radius: 0px 20px 20px 0px;
+  background: #a7acb898;
+  color: var(--Cinder-950, #040813) !important;
+  opacity: 1;
+  transition: background-color 0.3s ease;
+}
+
 .imgMenu {
-  margin-right: 12px;
   width: 50px;
-        height: 60px;
-        flex-shrink: 0;
-        margin-left:10px;
+  height: 60px;
+  flex-shrink: 0;
 }
 
  #perfil{
@@ -127,20 +82,23 @@ img {
   width: 60px;
   height: 60px;
   flex-shrink: 0;
-  margin-left:10px;
+  margin-left: 10px;
 }
 
 span {
-  display: none;
   color: white;
   font-size: 16px;
   white-space: nowrap;
   text-decoration:none;
+  margin-left: 10px;
+  opacity: 0;
+  transition: opacity 0.6s ease;
 }
 
-div.menu:hover span {
+div.menuCompleto:hover span {
   display: inline;
   flex-grow: 1;
+  opacity: 1;
 }
 
 .home {
@@ -149,5 +107,6 @@ div.menu:hover span {
   width: 100%;
   padding-top: 12px;
   transition: background 0.3s ease-in-out;
-  white-space: nowrap;  
+  white-space: nowrap;
+  align-items: center;
 }
