--- a/src/app/perfil-ordenador/perfil-ordenador.component.html
+++ b/src/app/perfil-ordenador/perfil-ordenador.component.html
@@ -2,7 +2,10 @@
   <app-menu></app-menu>
 <router-outlet />
 
-<img class="imgPag" src="./assets/perfil.png" alt=""><p class="tituloSecc">Perfil</p>
+<div class="titulo">
+  <img class="imgPag" src="./assets/perfil.png" alt="">
+  <p class="tituloSecc">Perfil</p>
+</div>
 
 <div id="todo" class="d-flex flex-row justify-content-center">
 
