--- a/src/app/administrativo/incidencias/incidencias.component.css
+++ b/src/app/administrativo/incidencias/incidencias.component.css
@@ -225,13 +225,15 @@ table tr {
   border: none;
 
   padding-left: 10px;
-  margin-left: -51%;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: -12px;
 }
 
 ::ng-deep div.swal2-html-container > textarea {
   width: 100%;
   height: 80px;
-  
+
   color: black;
   background: var(--Cinder-50, #F1F5FE);
   border: none;
@@ -242,7 +244,7 @@ table tr {
 
 ::ng-deep .swal2-styled {
   width: 200px;
-  
+
   border-radius: 4px;
   border: 2px solid var(--Cinder-900, #152D65);
   background: var(--Amarillo, #E59506);
@@ -322,13 +324,13 @@ table tr {
 
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
 
-} 
+}
 
 ::ng-deep .misCosas {
 
   margin-top: 40px;
   text-align: left;
-  
+
 }
 
 ::ng-deep .misCosas > label {
