--- a/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.css
+++ b/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.css
@@ -304,7 +304,8 @@ table tr {
   border: none;
 
   padding-left: 10px;
-  margin-left: -51%;
+  display: flex;
+  justify-content: flex-start;
 }
 
 ::ng-deep .swal2-confirm {
@@ -317,18 +318,18 @@ table tr {
 }
 
 ::ng-deep div.swal2-html-container > input.Por.empezar {
-  background-color: var(--Rojo, #FF6F6F);;
+  background-color: var(--Rojo, #FF6F6F);
 }
 ::ng-deep div.swal2-html-container > input.En.curso {
-  background-color: var(--Amarillo-3, #FACD84);;
+  background-color: var(--Amarillo-3, #FACD84);
 }
 ::ng-deep div.swal2-html-container > input.Completada {
-  background-color: var(--Verde, #B8FFB5);;
+  background-color: var(--Verde, #B8FFB5);
 }
 
 ::ng-deep .swal2-styled {
   width: 200px;
-  
+
   border-radius: 4px;
   border: 2px solid var(--Cinder-900, #152D65);
   background: var(--Amarillo, #E59506);
@@ -348,13 +349,13 @@ table tr {
 
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
 
-} 
+}
 
 ::ng-deep .misCosas {
 
   margin-top: 40px;
   text-align: left;
-  
+
 }
 
 ::ng-deep .misCosas > label {
