--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,7 +19,7 @@
         </a><br>
         <a class="nav-link d-flex flex-column">
           <div class="imagenLink">
-            <img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt="">
+            <img class="imgMenu" src="./assets/Gestor/crearGruas.png" alt="">
             <span>Crear Grua</span>
           </div>
         </a><br>
@@ -31,7 +31,7 @@
         </a><br>
         <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas">
           <div class="imagenLink">
-            <img class="imgMenu" src="./assets/Gestor/gestionarGruas.svg" alt="">
+            <img class="imgMenu" src="./assets/Gestor/gestionarGruas.png" alt="">
             <span>Gestionar Gruas</span>
           </div>
         </a><br>
@@ -54,6 +54,12 @@
         <div class="imagenLink">
           <img class="imgMenu" src="./assets/Administrativo/crearTurno.png" alt="">
           <span>Crear Turno</span>
+        </div>
+      </a><br>
+      <a class="nav-link d-flex flex-column">
+        <div class="imagenLink">
+          <img class="imgMenu" src="./assets/Administrativo/asignarTurno.png" alt="">
+          <span>Asignar turno</span>
         </div>
       </a><br>
       <a class="nav-link d-flex flex-column" routerLink="monitorizar-orden">
