--- a/src/app/perfil-ordenador/perfil-ordenador.component.css
+++ b/src/app/perfil-ordenador/perfil-ordenador.component.css
@@ -7,6 +7,7 @@ body {
 }
 .titulo {
   margin-left: 80px;
+  display: flex;
 }
 #todo {
   margin-left: 200px;
@@ -25,10 +26,8 @@ body {
   color: #000;
   font-size: 40px;
   font-weight: 700;
-  text-align: center; /* Centra el texto */
-  margin-top: 40px;
-  margin-right: 90px;
-
+  text-align: center;
+  margin-top: 42px;
 }
 
 .perfil {
