--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -44,12 +44,6 @@
       <a routerLink="/perfil-ordenador">
       <img class="perfil" src="./assets/Administrativo/perfil.svg" alt="">
       </a>
-      <a class="nav-link d-flex flex-column" routerLink="crear-orden">
-        <div class="imagenLink">
-          <img class="primeraImg imgMenu" src="./assets/Administrativo/crearOrden.png" alt="">
-          <span>Crear Orden</span>
-        </div>
-      </a><br>
       <a class="nav-link d-flex flex-column" routerLink="crear-turno">
         <div class="imagenLink">
           <img class="imgMenu" src="./assets/Administrativo/crearTurno.png" alt="">
@@ -74,16 +68,22 @@
           <span>Buscar Contenedor</span>
         </div>
       </a><br>
-      <a class="nav-link d-flex flex-column" routerLink="realizar-auditoria">
-        <div class="imagenLink">
-          <img class="imgMenu" src="./assets/Administrativo/realizarAuditoria.png" alt="">
-          <span>Realizar Auditoria</span>
-        </div>
-      </a><br>
       <a class="nav-link d-flex flex-column" routerLink="incidencias">
         <div class="imagenLink">
           <img class="imgMenu" src="./assets/Administrativo/incidencias.png" alt="">
           <span>Incidencias</span>
+        </div>
+      </a><br>
+      <a class="nav-link d-flex flex-column" routerLink="citas">
+        <div class="imagenLink">
+          <img class="imgMenu" src="./assets/Administrativo/GestionarCitasVer.svg" alt="">
+          <span>Citas</span>
+        </div>
+      </a><br>
+      <a class="nav-link d-flex flex-column" routerLink="vehiculos">
+        <div class="imagenLink">
+          <img class="imgMenu" src="./assets/Administrativo/RegistrarVehiculo.svg" alt="">
+          <span>Registrar Vehiculo</span>
         </div>
       </a><br>
     </div>
