Pantallas administrativo y login y menu cliente hechos

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,6 +35,12 @@
             <span>Gestionar Gruas</span>
           </div>
         </a><br>
+        <a class="nav-link d-flex flex-column" routerLink="empresas">
+          <div class="imagenLink">
+            <img class="imgMenu" src="./assets/Gestor/CrearEmpresa.svg" alt="">
+            <span>Ver empresas</span>
+          </div>
+        </a><br>
       </div>
 
     </div>
