--- a/src/app/administrativo/citas/citas.component.css
+++ b/src/app/administrativo/citas/citas.component.css
@@ -18,37 +18,6 @@ div.titulo {
   margin-bottom: 20px;
 }
 
-table {
-  width: 100%;
-  max-width: 1000px;
-  background-color: var(--Cinder-50, #f1f5fe);
-  margin: 0 auto;
-  overflow: auto;
-  border-collapse: collapse;
-}
-
-table td {
-  text-align: center;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  padding: 30px;
-}
-
-table th {
-  background-color: #152d65;
-  height: 80px;
-  color: var(--Cinder-50, #f1f5fe);
-  text-align: center;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  padding: 30px;
-  position: sticky;
-}
-
 .tituloSecc {
   width: 390px;
   height: 58px;
@@ -104,7 +73,7 @@ table th {
   padding: 8px !important;
   border-radius: 4px !important;
   font-size: 1em !important;
-  margin-top: -8px;;
+  margin-top: -8px;
   margin-right: 130px;
   /* border: 2px solid #000; */
 
@@ -159,7 +128,8 @@ table th {
   background: rgba(217, 217, 217, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
   z-index: 1;
-  margin-left: 930px;
+  margin-bottom: 4.2%;
+  margin-left: 1110px;
   color: #000;
   text-align: center;
   font-size: 20px;
@@ -187,6 +157,11 @@ table th {
   table-layout: fixed;
   width: 100%;
 }
+::ng-deep .dt-container {
+  margin-top: -18%;
+  margin-left: -22%;
+  width: 1400px;
+}
 
 ::ng-deep .dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
   background-color: #152d65;
@@ -203,8 +178,9 @@ table th {
 
 ::ng-deep .dt-scroll > .dt-scroll-body > table > tbody > tr > td {
   text-align: center;
+  font-size: 22px;
   border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
-  padding: 20px;
+  padding: 25px;
 }
 
 .dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(1) {
@@ -339,23 +315,34 @@ table th {
   line-height: normal;
 
 }
-
+::ng-deep .misCosas > .swal2-select,
+::ng-deep .misCosas > input[type='date'] {
+  border: none;
+  font-size: 1.2rem;
+  display: flex;
+  width: 227px;
+  height: 49px;
+  padding-left: 2%;
+  align-items: center;
+  flex-shrink: 0;
+}
 ::ng-deep .misCosas > .swal2-select {
-
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     background: url('/assets/flecha.svg') no-repeat calc(100% - 3%) var(--Cinder-100, #E3E9FB) !important;
-    border: none;
-    font-size: 1.2rem;
-    display: flex;
-    width: 227px;
-    height: 49px;
-    padding-left: 2%;
     justify-content: flex-end;
-    align-items: center;
-    flex-shrink: 0;
-
+}
+::ng-deep .misCosas > input[type='date'] {
+  background-color: var(--Cinder-100, #E3E9FB) !important;
+  margin-top: 4%;
+  margin-left: 9%;
+  justify-content: space-between;
+}
+::ng-deep .misCosas > input[type='date']::-webkit-calendar-picker-indicator {
+  position: relative;
+  left: 46px;
+  cursor: pointer;
 }
 
 ::ng-deep .swal2-styled {
