--- a/src/app/administrativo/vehiculos/vehiculos.component.html
+++ b/src/app/administrativo/vehiculos/vehiculos.component.html
@@ -1,1 +1,20 @@
-<p>vehiculos works!</p>
+<div class="titulo"><img class="imgPag" src="./assets/Administrativo/RegistrarVehiculo.svg"><p class="tituloSecc">Transportes</p></div>
+
+<div class="crearNuevo">
+  <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
+  <img src="./assets/vector.svg" class="botonImagen2" alt="Filtrar">
+</div>
+
+<div class="contenedor-tabla">
+    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
+        <thead>
+          <tr>
+            <th>Código contenedor</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
