--- a/src/app/gestor/empresas/empresas.component.css
+++ b/src/app/gestor/empresas/empresas.component.css
@@ -2,7 +2,6 @@ div.titulo {
   margin-left: 80px;
 }
 .usuarios-container {
-  margin: 20px auto;
   padding: 20px;
   max-width: 1200px;
   background-color: #f9f9f9;
@@ -20,10 +19,9 @@ div.titulo {
 
 table {
   width: 100%;
-  max-width: 1200px;
+  max-width: 100%;
   background-color: var(--Cinder-50, #f1f5fe);
   margin: 0 auto;
-  overflow: auto;
   border-collapse: collapse;
 }
 
@@ -39,7 +37,7 @@ table td {
 table th {
   background-color: #152d65;
   width: 1477px;
-  height: 80px;
+  height: 40px;
   color: var(--Cinder-50, #f1f5fe);
   text-align: center;
   font-size: 24px;
@@ -48,6 +46,10 @@ table th {
   line-height: normal;
   padding: 30px;
   position: sticky;
+}
+
+tbody {
+  overflow-y: auto;
 }
 
 table tr {
@@ -70,7 +72,7 @@ table tr {
   display: inline-block;
   vertical-align: middle;
   margin-left: 10px;
-  margin-top: 60px;
+  margin-top: 40px;
   margin-bottom: 80px;
 }
 
@@ -81,38 +83,36 @@ table tr {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  margin-top: 30px;
+  margin-top: -5px;
   margin-bottom: 40px;
+
+  filter: brightness(0) invert(0);
 }
 
 .contenedor-tabla {
   max-height: 600px;
   margin: 0 auto;
-  margin-left: 400px;
-  width: 1200px;
+  margin-left: 300px;
+  max-width: 1477px;
   margin-top: -70px;
 }
 
-::ng-deep .dataTables_scrollBody thead tr {
+.dataTables_scrollBody thead tr {
   visibility: collapse;
 }
 
-::ng-deep ::ng-deep .dataTables_scrollBody {
-  margin-top: -10px;
-}
-
-::ng-deep div.dt-search {
+div.dt-search {
   width: 270px !important;
   padding: 8px !important;
   border-radius: 4px !important;
   font-size: 1em !important;
-  margin-top: -8px;
-  margin-right: 130px;
+  margin-top: -8px;;
+  margin-right: 12px;
   /* border: 2px solid #000; */
 
 }
 
-::ng-deep div.dt-search input {
+div.dt-search input {
   width: 100% !important;
   padding: 8px !important;
   border-radius: 4px !important;
@@ -125,26 +125,27 @@ table tr {
   background-image: url('/assets/lupa.svg') !important;
   background-repeat: no-repeat;
   background-position: left 10px center !important; /* Adjust the position of the icon */
+  padding-left: 70px !important;
 }
 
-::ng-deep .dt-search label {
-  display: none;
+input#dt-search-0.dt-input {
+
+  text-align: center;
+
 }
-::ng-deep input#dt-search-0.dt-input {
+
+
+.dt-layout {
   text-align: center;
 }
 
-::ng-deep .dt-layout {
-  text-align: center;
-}
-
-::ng-deep .dataTables_scrollBody {
+.dataTables_scrollBody {
   margin-top: -10px;
 }
 
 .crearNuevo {
   display: flex;
-  margin-left: 400px;
+  margin-left: 300px;
   margin-bottom: 35px;
   margin-top: -30px;
 }
@@ -161,6 +162,8 @@ table tr {
   background: rgba(217, 217, 217, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
   z-index: 1;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .botonCrear:hover {
@@ -177,35 +180,40 @@ table tr {
   margin-left: -90px;
 }
 
-.botonAuditoria {
+.botonEliminar {
   display: flex;
-  padding-left: 39px;
+  padding-left: 42px;
   align-items: center;
-  width: 118px;
+  width: 220px;
   height: 35px;
   border-radius: 4px;
   border: 2px solid #000;
   background: rgba(217, 217, 217, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
   z-index: 1;
-  margin-left: 92px;
+  margin-left: 80px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-.botonAuditoria:hover {
+.botonEliminar:hover {
   border-radius: 4px;
   border: 2px solid rgba(0, 0, 0, 0.5);
   background: rgba(217, 217, 217, 0);
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
-.botonImagen3 {
+.botonImagen2 {
   width: 25px;
   height: 25px;
   flex-shrink: 0;
-  margin-top: 5px;
-  margin-left: -108px;
+  margin-top: 6px;
+  margin-left: -210px;
 }
-
 
 .botonFiltrar{
 
@@ -235,7 +243,8 @@ table tr {
   background: rgba(217, 217, 217, 0);
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
 }
-.botonImagen2 {
+
+.botonImagen3 {
   width: 25px;
   height: 25px;
   flex-shrink: 0;
@@ -243,7 +252,7 @@ table tr {
   margin-left: -100px;
 }
 
-::ng-deep .dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
+.dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
   background-color: #152d65;
   width: 1477px;
   height: 80px;
@@ -257,85 +266,177 @@ table tr {
   position: sticky;
 }
 
-::ng-deep .dt-scroll > .dt-scroll-body > table > tbody > tr > td {
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td {
   text-align: center;
   font-size: 20px;
   border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
   padding: 25px;
 }
 
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(1) {
+  text-align: left;
+  padding: 25px;
+  margin-left: -200px;
+}
 
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(2) {
+  text-align: center;
+  padding: 25px;
+  padding-left: 0px;
+  padding-right: 56px;
+}
 
-/* Modales */
-::ng-deep div.swal2-popup {
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(3) {
+  text-align: center;
+  padding: 25px;
+  padding-left: 0px;
+}
+
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td > .select-checkbox {
+  margin-left: 25px;
+  margin-right: 105px;
+}
+
+/* modales */
+
+.mi-popup {
   border-radius: 32px;
   border: 2px solid #000;
-
   background: #FFFCFC;
+  width: 650px;
 
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+
 }
 
-::ng-deep h2.swal2-title {
+.misCosas2{
+
+  margin-top: 40px;
+  margin-left: 30px;
+  text-align: left;
+  height: 600px;
+
+}
+
+
+.misCosas2 > p>span{
+
+  color: var(--Cinder-900, #152D65);
+  text-align: center;
+  font-size: 29px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 30px;
+  margin-left: -14px;
+
+}
+
+.misCosas2 > label>span{
+
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+
+}
+
+.misCosas2 > .div1>label{
+
+  margin-bottom: 5px;
+
+}
+
+.misCosas2 > .div2>label{
+
+  margin-bottom: 5px;
+
+}
+
+.misCosas2>.div1  {
+
+
+  position: absolute;
+  left: 7%;
+  top: 25%;
+
+}
+
+.misCosas2>.div2 {
+
+  position: absolute;
+  left: 53%;
+  top: 25%;
+}
+
+.misCosas2>.div1>input  {
+
+  margin-left: 0px;
+  border: none;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  width: 265.205px;
+  height: 53.297px;
+  flex-shrink: 0;
+  background: var(--Cinder-50, #F1F5FE);
+
+}
+
+.misCosas2>.div2>input  {
+
+  margin-left: 0px;
+  border: none;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  width: 265.205px;
+  height: 53.297px;
+  flex-shrink: 0;
+  background: var(--Cinder-50, #F1F5FE);
+
+}
+
+.mi-titulo {
   color: var(--Cinder-950, #040813);
   border-bottom: solid 2px black;
-
   padding-bottom: 4%;
   margin-bottom: -4%;
-
+  text-align: center;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
   text-align: left;
 }
 
-::ng-deep div.swal2-html-container > h3 {
-  color: var(--Cinder-900, #152D65);
-
-  text-align: left;
-  margin-top: 4%;
-  margin-left: 1%;
-}
-::ng-deep div.swal2-html-container > input {
-  color: black;
-  background: var(--Cinder-50, #F1F5FE);
-  border: none;
-
-  padding-left: 10px;
-  display: flex;
-  justify-content: flex-start;
-}
-
-::ng-deep .swal2-confirm {
-  width: 400px;
-
-  border-radius: 4px;
-  border: 2px solid var(--Cinder-900, #152D65);
-  background: var(--Cinder-900, #152D65);
-  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-::ng-deep div.swal2-html-container > input.Por.empezar {
-  background-color: var(--Rojo, #FF6F6F);
-}
-::ng-deep div.swal2-html-container > input.En.curso {
-  background-color: var(--Amarillo-3, #FACD84);
-}
-::ng-deep div.swal2-html-container > input.Completada {
-  background-color: var(--Verde, #B8FFB5);
-}
-
-::ng-deep .swal2-styled {
+.mi-boton,
+.mi-boton-cancelar {
   width: 200px;
+  margin-top: -100px;
 
   border-radius: 4px;
   border: 2px solid var(--Cinder-900, #152D65);
-  background: var(--Amarillo, #E59506);
   box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-::ng-deep .swal2-confirm {
-  background: var(--Cinder-900, #152D65);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-/* Filtro */
-::ng-deep .mi-popup2 {
+.mi-boton {
+  background: var(--Cinder-900, #152D65);
+}
+.mi-boton-cancelar {
+  background: var(--Amarillo, #E59506);
+}
+
+.mi-boton:hover {
+  background: var(--Cinder-950, #040813 );
+}
+
+.mi-popup2{
 
   border-radius: 32px;
   border: 2px solid #000;
@@ -346,14 +447,14 @@ table tr {
 
 }
 
-::ng-deep .misCosas {
+.misCosas{
 
   margin-top: 40px;
   text-align: left;
 
 }
 
-::ng-deep .misCosas > label {
+.misCosas > label{
 
   color:  var(--Cinder-900, #152D65) ;
   margin-left: 40px;
@@ -364,8 +465,18 @@ table tr {
   line-height: normal;
 
 }
+.misCosas > input {
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
 
-::ng-deep .misCosas > .swal2-select {
+  padding-left: 10px;
+  display: flex;
+  justify-content: flex-start;
+
+}
+
+.misCosas > .swal2-select{
 
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -383,7 +494,7 @@ table tr {
 
 }
 
-::ng-deep .mi-titulo2 {
+.mi-titulo2 {
   color: var(--Cinder-950, #040813);
   border-bottom: solid 2px black;
 
@@ -393,7 +504,7 @@ table tr {
   text-align: left;
 }
 
-::ng-deep .mi-boton2 {
+.mi-boton2 {
   width: 370px;
 
   border-radius: 4px;
@@ -408,10 +519,164 @@ table tr {
   line-height: normal;
 }
 
-::ng-deep .mi-cruz{
+.mi-cruz{
 
   color: #040813;
   margin-right: 40px;
   padding-top: 27px;
 
+}
+
+/* TERCER POPUP */
+
+.mi-popup3{
+
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 500px;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+
+}
+
+.misCosas3{
+
+  margin-top: 40px;
+  text-align: left;
+
+}
+
+div#swal2-html-container.swal2-html-container.misCosas3{
+
+  color:  var(--Cinder-900, #152D65) ;
+  margin-left: 33px;
+  color: var(--Cinder-900, #152D65);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+}
+
+select#swal2-select.swal2-select{
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url('/assets/flecha.svg') no-repeat calc(100% - 3%) var(--Cinder-100, #E3E9FB) !important;
+    border: none;
+    font-size: 1.2rem;
+    display: flex;
+    width: 365px;
+    height: 49px;
+    padding-left: 2%;
+    justify-content: flex-end;
+    align-items: center;
+    flex-shrink: 0;
+    margin-left: 66px;
+
+}
+
+.mi-titulo3 {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+.mi-boton3 {
+  width: 370px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.mi-cruz3{
+
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
+
+}
+
+.mi-cruz2{
+
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
+
+}
+
+/* Estilo para el Popup de Warning */
+
+div.swal2-popup.swal2-modal.swal2-icon-warning.swal2-show {
+  border-radius: 32px !important;
+  border: 2px solid #000 !important;
+  width: 500px !important;
+  background: #FFFCFC !important;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50) !important;
+}
+
+.misCosas-warning {
+  margin-top: 20px;
+  text-align: left;
+}
+
+h2#swal2-title.swal2-title{
+  color: #000 !important;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+/* Estilo para el Popup de Success */
+.mi-popup-success {
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 500px;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+.misCosas-success {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.mi-titulo-success {
+  color: #000;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.mi-boton-success {
+  width: 370px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
