--- a/src/app/cliente/citas-cliente/citas-cliente.component.html
+++ b/src/app/cliente/citas-cliente/citas-cliente.component.html
@@ -1,1 +1,23 @@
-<p>citas-cliente works!</p>
+<div class="titulo">
+  <img class="imgPag" src="./assets/Administrativo/GestionarCitas.svg">
+  <h1 class="tituloSecc">Ver Citas</h1>
+</div>
+
+<div class="crearNuevo">
+  <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
+  <img src="./assets/vector.svg" class="botonImagen2" alt="Filtrar">
+</div>
+
+<div class="contenedor-tabla">
+    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
+        <thead>
+          <tr>
+            <th>Código contenedor</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
