Terminacion del proyecto, de momento

--- a/src/app/cliente/citas-cliente/citas-cliente.component.html
+++ b/src/app/cliente/citas-cliente/citas-cliente.component.html
@@ -4,6 +4,10 @@
 </div>
 
 <div class="crearNuevo">
+  <button type="submit" class="btn btn-info botonFiltrar">Pedir</button>
+  <img src="./assets/Administrativo/crearOrdenVer.svg" class="botonImagen" alt="Crear usuario">
+</div>
+<div class="filtrar">
   <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
   <img src="./assets/vector.svg" class="botonImagen2" alt="Filtrar">
 </div>
