--- a/src/app/cliente/citas-cliente/citas-cliente.component.css
+++ b/src/app/cliente/citas-cliente/citas-cliente.component.css
@@ -17,6 +17,7 @@
 ::ng-deep .dt-container {
   width: 350px;
 
+  margin-top: 60px;
   margin-left: 12px;
 }
 ::ng-deep .dt-container thead > tr > th  {
@@ -27,12 +28,193 @@
   text-align: center;
 }
 ::ng-deep .dt-container tbody > tr > td {
-  font-size: 1.2rem;
+  height: 60px;
+  font-size: 1.1rem;
   text-align: center;
+  vertical-align: middle;
+  border-top: 8px solid white;
 }
-::ng-deep .dt-container tbody > tr > td.completada {
+::ng-deep .dt-container tbody > tr.completada > td,
+::ng-deep div.swal2-html-container > input.completada {
   background-color: #B8FFB5;
 }
-::ng-deep .dt-container tbody > tr > td.enrevision {
+::ng-deep .dt-container tbody > tr.enrevision > td,
+::ng-deep div.swal2-html-container > input.enrevision {
   background-color: #FACD84;
+}
+
+.crearNuevo {
+  position: absolute;
+  top: 70px;
+  left: 12px;
+}
+.botonImagen {
+  width: 28px;
+
+  position: relative;
+  top: 1px;
+  right: 24%;
+}
+
+.filtrar {
+  width: 110px;
+
+  position: absolute;
+  top: 2%;
+  right: 3%;
+}
+
+.botonFiltrar {
+  background-color: white;
+  border: solid 3px black;
+
+  font-size: 1.2rem;
+  font-weight: bold;
+
+  padding: 1px 10px;
+  width: 110px;
+  text-align: start;
+}
+.botonFiltrar:hover {
+  background-color: lightgray;
+}
+
+.botonImagen2 {
+  position: relative;
+  bottom: 28px;
+  left: 64%;
+}
+
+
+/* Modales */
+::ng-deep div.swal2-popup {
+  border-radius: 32px;
+  border: 2px solid #000;
+
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+::ng-deep h2.swal2-title {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+::ng-deep div.swal2-html-container > h3 {
+  color: var(--Cinder-900, #152D65);
+
+  font-size: 1.6rem;
+
+  text-align: left;
+  margin-top: 2%;
+  margin-left: 1%;
+}
+::ng-deep div.swal2-html-container > p {
+  color: black;
+  text-align: left;
+  margin-top: -2%;
+  margin-bottom: 1%;
+  margin-left: 1%;
+}
+::ng-deep div.swal2-html-container > input,
+::ng-deep div.swal2-html-container > select {
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
+
+  width: 40%;
+
+  padding-left: 10px;
+  display: flex;
+  justify-content: flex-start;
+}
+::ng-deep div.swal2-html-container > select {
+  width: 55%;
+}
+
+::ng-deep .swal2-confirm {
+  width: 220px;
+  height: 60px;
+
+  font-size: 1.8rem;
+  padding: 0px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+/* Filtro */
+::ng-deep .mi-popup2 {
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 100%;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+::ng-deep .misCosas {
+  margin-top: 40px;
+  text-align: left;
+}
+
+::ng-deep .misCosas > label {
+  color:  var(--Cinder-900, #152D65) ;
+  margin-left: 40px;
+  color: var(--Cinder-900, #152D65);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+::ng-deep .misCosas > .swal2-select,
+::ng-deep .misCosas > input[type='date'] {
+  font-size: 1.2rem;
+  border: none;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+
+  width: 227px;
+  height: 49px;
+
+  margin-top: 2%;
+  padding-left: 2%;
+}
+::ng-deep .misCosas > .swal2-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url('/assets/flecha.svg') no-repeat calc(100% - 3%) var(--Cinder-100, #E3E9FB) !important;
+    justify-content: flex-end;
+}
+::ng-deep .misCosas > input[type='date'] {
+  background-color: var(--Cinder-100, #E3E9FB) !important;
+  margin-top: 4%;
+  margin-left: 13%;
+  justify-content: space-between;
+}
+
+::ng-deep .mi-titulo2 {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+::ng-deep .mi-cruz{
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
 }
