--- a/src/app/administrativo/vehiculos/vehiculos.component.html
+++ b/src/app/administrativo/vehiculos/vehiculos.component.html
@@ -1,4 +1,7 @@
-<div class="titulo"><img class="imgPag" src="./assets/Administrativo/RegistrarVehiculo.svg"><p class="tituloSecc">Transportes</p></div>
+<div class="titulo">
+  <img class="imgPag" src="./assets/Administrativo/RegistrarVehiculo.svg">
+  <p class="tituloSecc">Transportes</p>
+</div>
 
 <div class="crearNuevo">
   <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
