--- a/src/app/cliente/perfil-cliente/perfil-cliente.component.css
+++ b/src/app/cliente/perfil-cliente/perfil-cliente.component.css
@@ -25,8 +25,9 @@ div.info {
   gap: 10px 0px;
 }
 img.perfil {
-  width: 120px;
+  width: 125px;
   margin-top: 30px;
+  border-radius: 50%;
 }
 
 label {
@@ -44,11 +45,11 @@ input {
 }
 
 button {
-  width: 220px;
-  height: 60px;
+  width: 160px;
+  height: 50px;
 
   font-size: 1.8rem;
-  margin-top: 25px;
+  margin-top: 30px;
   padding: 0px;
 
   border-radius: 4px;
