--- a/src/app/gestor/empresas/empresas.component.css
+++ b/src/app/gestor/empresas/empresas.component.css
@@ -279,6 +279,9 @@ input#dt-search-0.dt-input {
   margin-right: 105px;
 }
 
+
+
+
 /* modales */
 
 .mi-popup {
@@ -661,4 +664,14 @@ h2#swal2-title.swal2-title{
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+
+.ok-success {
+  width: 200px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
