Ultimos retoques del estilo y filtrado por cliente en citas

--- a/src/app/administrativo/vehiculos/vehiculos.component.html
+++ b/src/app/administrativo/vehiculos/vehiculos.component.html
@@ -3,6 +3,12 @@
   <p class="tituloSecc">Transportes</p>
 </div>
 
+
+<div class="crearNuevo">
+  <button type="submit" class="btn btn-info botonCrear">Registrar</button>
+  <img src="./assets/Administrativo/RegistrarVehiculo.svg" class="botonImagen">
+</div>
+
 <div class="crearNuevo">
   <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
   <img src="./assets/vector.svg" class="botonImagen2" alt="Filtrar">
