--- a/src/app/administrativo/citas/citas.component.css
+++ b/src/app/administrativo/citas/citas.component.css
@@ -117,26 +117,32 @@ div.titulo {
 }
 
 .botonFiltrar{
-
-  display: flex;
-  padding-left: 39px;
-  align-items: center;
-  width: 110px;
-  height: 35px;
   border-radius: 4px;
   border: 2px solid #000;
+  color: #000;
   background: rgba(217, 217, 217, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
-  z-index: 1;
+
+  position: relative;
+  top: -80px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  width: 110px;
+  height: 35px;
+
   margin-bottom: 4.2%;
   margin-left: 1110px;
-  color: #000;
-  text-align: center;
+  padding-left: 39px;
+
+  z-index: 1;
+
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-
 }
 
 .botonFiltrar:hover {
@@ -148,9 +154,14 @@ div.titulo {
 .botonImagen2 {
   width: 25px;
   height: 25px;
-  flex-shrink: 0;
+
+  position: relative;
+  top: -80px;
+
   margin-top: 9px;
   margin-left: -100px;
+
+  flex-shrink: 0;
 }
 
 ::ng-deep .dt-scroll-head > .dt-scroll-headInner > table {
@@ -158,7 +169,7 @@ div.titulo {
   width: 100%;
 }
 ::ng-deep .dt-container {
-  margin-top: -18%;
+  margin-top: -26%;
   margin-left: -22%;
   width: 1400px;
 }
