--- a/src/app/administrativo/vehiculos/vehiculos.component.css
+++ b/src/app/administrativo/vehiculos/vehiculos.component.css
@@ -116,10 +116,60 @@ div.titulo {
   display: flex;
   margin-left: 460px;
   margin-bottom: -125px;
-  margin-top: 6%;
+  margin-top: 5.4%;
+}
+
+.botonCrear {
+  border-radius: 4px;
+  border: 2px solid #000;
+  background: rgba(217, 217, 217, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  position: relative;
+  left: -67px;
+  top: -85px;
+
+  width: 134px;
+  height: 35px;
+  padding-left: 37px;
+  padding-right: 3px;
+
+  z-index: 1;
+}
+.botonCrear:hover {
+  border-radius: 4px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  background: rgba(217, 217, 217, 0);
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+}
+.botonImagen {
+  position: relative;
+  top: -81px;
+  left: -193px;
+
+  width: 25px;
+  height: 30px;
+
+  filter: brightness(0) invert(0);
 }
 
 .botonFiltrar{
+  border-radius: 4px;
+  border: 2px solid #000;
+  color: #000;
+  background: rgba(217, 217, 217, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+
+  width: 110px;
+  height: 35px;
 
   display: flex;
   margin-bottom: 7.7%;
@@ -127,14 +177,8 @@ div.titulo {
   padding-left: 39px;
   align-items: center;
 
-  width: 110px;
-  height: 35px;
-
-  border-radius: 4px;
-  border: 2px solid #000;
-  color: #000;
-  background: rgba(217, 217, 217, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: -85px;
 
   z-index: 1;
   text-align: center;
@@ -154,13 +198,17 @@ div.titulo {
 .botonImagen2 {
   width: 25px;
   height: 25px;
-  flex-shrink: 0;
+
+  position: relative;
+  top: -85px;
+
   margin-top: 9px;
   margin-left: -100px;
+  flex-shrink: 0;
 }
 
 ::ng-deep .dt-container {
-  margin-top: -18%;
+  margin-top: -25%;
   margin-left: -5%;
   width: 1200px;
 }
