--- a/src/app/gestor/crear-usuario/crear-usuario.component.html
+++ b/src/app/gestor/crear-usuario/crear-usuario.component.html
@@ -1,1 +1,79 @@
-<p>crear-usuario works!</p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Crear usuario</title>
+
+        <link href="https://fonts.bunny.net/css?family=figtree:400,500,600&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
+
+    <body>
+        <h1><img src="assets/Gestor/usuariosCrear.svg">  Crear Usuario</h1>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div class="div1">
+                <h2 class="num">1</h2>
+                <h2>Datos</h2>
+                <label for="name">Nombre y apellidos</label>
+                <input type="text" formControlName="name" name="name">
+                <label for="usuario">Usuario</label>
+                <input type="text" formControlName="usuario" name="usuario">
+                <label for="ciudad">Ciudad</label>
+                <input type="text" formControlName="ciudad" name="ciudad">
+                <label for="email">E-mail</label>
+                <input type="email" formControlName="email" name="email">
+
+            </div>
+
+            <div class="div4">
+
+                <label for="telf">Número de teléfono</label>
+                <input type="tel" formControlName="telefono" name="telefono">
+                <label for="postal">Código Postal</label>
+                <input type="text" formControlName="codigoPostal" name="codigoPostal">
+
+            </div>
+
+            <div class="div3">
+                <h2 class="num">2</h2>
+                <h2>Contraseña</h2>
+                <label for="contrasenya">Contraseña</label>
+                <input type="password" name="password" formControlName="password">
+                <label for="contrasenya2">Confirma la contraseña</label>
+                <input type="password" name="password_confirmation" formControlName="password_confirmation">
+
+            </div>
+
+            <div class="div2">
+                <h2 class="num">3</h2>
+                <h2>Roles</h2>
+                <p>Tipo de usuario</p>
+                <select formControlName="cargo" name="cargo" id="cargo" (change)="mostrarEmpresas()">
+                    <option value="gestor">Gestor</option>
+                    <option value="administrativo">Administrativo</option>
+                    <option value="operador">Operador</option>
+                    <option value="cliente">Cliente</option>
+                </select>
+            </div>
+
+            @if (client) {
+                <div class="div5" id="empresa">
+                    <p>Empresa</p>
+                    <select formControlName="empresa" name="empresa">
+                        @for (empresa of empresas; track empresa.id) {
+                            <option [value]="empresa.id">{{ empresa.nombre }}</option>
+                        }
+                    </select>
+                </div>
+            }
+
+            <button class="crear btn btn-primary">Crear</button>
+        </form>
+
+        <a href="gestor/usuarios" class="cancelar btn btn-warning">Cancelar</a>
+
+    </body>
+</html>
