Fin pantallas front

--- a/src/app/cliente/citas-cliente/citas-cliente.component.html
+++ b/src/app/cliente/citas-cliente/citas-cliente.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="crearNuevo">
-  <button type="submit" class="btn btn-info botonFiltrar">Pedir</button>
+  <button id="crear" type="submit" class="btn btn-info botonFiltrar" onclick="location.href = 'cliente/pedir-citas'">Pedir Cita</button>
   <img src="./assets/Administrativo/crearOrdenVer.svg" class="botonImagen" alt="Crear usuario">
 </div>
 <div class="filtrar">
