--- a/src/app/cliente/pedir-cita/pedir-cita.component.html
+++ b/src/app/cliente/pedir-cita/pedir-cita.component.html
@@ -71,6 +71,6 @@
             <button class="crear btn">Solicitar</button>
         </form>
 
-        <a href="gestor/usuarios" class="cancelar btn btn-warning">Cancelar</a>
+        <a href="cliente/ver-citas" class="cancelar btn btn-warning">Cancelar</a>
     </body>
 </html>
